<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AuthLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/profileSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseProfileText" />

    <Button
        android:id="@+id/authBtn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/Login"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authPotionsText" />

    <Button
        android:id="@+id/BackBtn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Back"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delBtn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/delProf"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProfileBtn" />

    <Button
        android:id="@+id/newProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/newProf"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authBtn" />

    <EditText
        android:id="@+id/profileNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:editable="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/authBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authPotionsText" />

    <TextView
        android:id="@+id/chooseNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseName"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chooseProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/chooseProf"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authMnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/gold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSpinner" />

    <TextView
        android:id="@+id/authLvlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvlexp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/authMnText"
        app:layout_constraintTop_toBottomOf="@+id/authMnText" />

    <TextView
        android:id="@+id/authHPText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/health"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/authLvlText"
        app:layout_constraintTop_toBottomOf="@+id/authLvlText" />

    <TextView
        android:id="@+id/authMHPText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxHealth"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/authHPText"
        app:layout_constraintTop_toBottomOf="@+id/authHPText" />

    <TextView
        android:id="@+id/authWeaponText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weaponStage"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/authMHPText"
        app:layout_constraintTop_toBottomOf="@+id/authMHPText" />

    <TextView
        android:id="@+id/authPotionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countPotions"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/authWeaponText"
        app:layout_constraintTop_toBottomOf="@+id/authWeaponText" />

</androidx.constraintlayout.widget.ConstraintLayout>